@@ -34,6 +34,11 @@ Robin Lynn Frank on the <em>tmda-users mailing list</em>
 Adam McKenna on the <em>qmail mailing list</em>
 <br><br>
 
+"TMDA is the best thing since the invention of sliced bread. Scratch
+that - I could live without sliced bread..."<br>
+Robin S. Socha on the <em>tmda-users mailing list</em>
+<br><br>
+
 "Sure there are other anti-spam programs they can use, but nothing is
 as elegant as TMDA."<br>
 Vincent Danen on the <em>tmda-users mailing list</em>
@@ -48,9 +53,6 @@ Matt Armstrong on the <em>ding mailing list</em>
 Guido van Driel on the <em>qmail mailing list</em>
 <br><br>
 
-"http://tmda.sourceforge.net/ is the way to go. Excellent, excellent work by Jason!"<br>
-Robin S. Socha on <em>gnu.emacs.gnus</em> 
-<br><br>
 
 </blockquote>
 
