@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Jan  7 10:44:43 2002 -->
+<!-- Tue Jan  8 13:09:15 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -159,6 +159,11 @@ Robin Lynn Frank on the <em>tmda-users mailing list</em>
 Adam McKenna on the <em>qmail mailing list</em>
 <br><br>
 
+"TMDA is the best thing since the invention of sliced bread. Scratch
+that - I could live without sliced bread..."<br>
+Robin S. Socha on the <em>tmda-users mailing list</em>
+<br><br>
+
 "Sure there are other anti-spam programs they can use, but nothing is
 as elegant as TMDA."<br>
 Vincent Danen on the <em>tmda-users mailing list</em>
@@ -173,9 +178,6 @@ Matt Armstrong on the <em>ding mailing list</em>
 Guido van Driel on the <em>qmail mailing list</em>
 <br><br>
 
-"http://tmda.sourceforge.net/ is the way to go. Excellent, excellent work by Jason!"<br>
-Robin S. Socha on <em>gnu.emacs.gnus</em> 
-<br><br>
 
 </blockquote>
 
