@@ -1,5 +1,8 @@
 2002-01-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* results.ht (Links): Replace Robin Socha testimonial with
+	<deathsquad.87666dmzet.fsf@socha.net>.
+	
 	* faq.ht: New entries: 
 
 	- "Is TMDA planning to support Microsoft Exchange Server?"
